@@ -1,3 +1,8 @@
+2003-12-11  Gary Thomas  <gary@mlbassoc.com>
+
+	* include/hal_intr.h: Add macros to manipulate machine check enable
+	bit in the MSR.
+
 2003-12-08  Gary Thomas  <gary@mlbassoc.com>
 
 	* src/hal_misc.c (cyg_hal_exception_handler): Only declare __mem_fault_handler
